--- a/Unit_testing/student_login.html
+++ b/Unit_testing/student_login.html
@@ -12,7 +12,7 @@
 
 <p>Enter your Oracle login details into the form below to test your Assignment 1 schema.</p>
 
-<div class="uniredbg" style="color: white; padding: 1em 4em 1em 4em; text-align: center; width: 50%;">
+<div class="red-ou" style="padding: 1em 4em 1em 4em; text-align: center; width: 50%;">
 
 <h3>IMPORTANT!</h3>
 
